# myDiscord

./: .gitignore  CMakeLists.txt  style.css  test  test.c
TRY/client/: client  client.c  main.c  makefile  mydiscord
TRY/server/: clean_port.sh  makefile  server  server.c  server_main.c  stop_server.sh
client/: client.c  client.h  interface.c  interface.h  main.c
discord_clone/: CMakeLists.txt  interface  interface.c  style.css
discord_clone/frontend/: interface  interface.c  style.css
include/: db.h  gui.h
server/: channel.c  channel.h  crypto.c  crypto.h  database.c  database.h  load_env.c  load_env.h  message.c  message.h  server.c  server.h  server_main.c  user.c  user.h
src/: client  client.c  db.c  gui.c  log_style.css  main.c  server  server.c
